--- a/requirements.txt
+++ b/requirements.txt
@@ -52,3 +52,13 @@ Pillow>=10.0.0
 # torchvision>=0.15.0      # Pre-trained vision models
 # tensorflow>=2.14.0       # TensorFlow backend (alternative to PyTorch)
 # networkx>=3.0.0          # Phase 4: Knowledge graph community detection & metrics
+
+# ── Cloud Storage & Database Connectors (Phase 6) ───────────────────
+# Install the connectors you need:
+sqlalchemy>=2.0.0          # Required for any database connector
+# boto3>=1.34.0            # AWS S3 connector
+# azure-storage-blob>=12.19.0  # Azure Blob Storage connector
+# google-cloud-storage>=2.14.0 # Google Cloud Storage connector
+# psycopg2-binary>=2.9.0   # PostgreSQL driver (for sqlalchemy)
+# pymysql>=1.1.0            # MySQL / MariaDB driver (for sqlalchemy)
+# pyodbc>=5.0.0             # SQL Server driver (for sqlalchemy + ODBC)
